--- a/GenericAccounting/GenericAccounting/Views/Shared/_Layout.cshtml
+++ b/GenericAccounting/GenericAccounting/Views/Shared/_Layout.cshtml
@@ -17,10 +17,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Generic Accounting Site", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Home", "Index", "Home", new { @class = "navbar-brand" })</li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Log Out", "doLogOut", "Login", new { @class = "navbar-brand" })</li>
+                    }
+                    else
+                    {
+                        <li>@Html.ActionLink("Log In", "Index", "Login", new { @class = "navbar-brand" })</li>
+                    }
                 </ul>
             </div>
         </div>
